--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-select": "^5.2.2",
     "react-toastify": "^8.1.0",
     "sass": "^1.49.0",
     "socket.io-client": "^4.4.1",
